-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.3.0-beta1
-
None
-
Mac OS 10.12.4
DO:
- open project
- right-click on project -> Add Existing Directory
HAPPEN:
- application cashes with segfault (see Attachment)
| For Gerrit Dashboard: QTCREATORBUG-18160 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 193912,3 | ProjectNodes: Fix crash in FolderNode::addFileFilter() | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |