ProjectNodes: Fix crash in FolderNode::addFileFilter()

Task-number: QTCREATORBUG-18160
Change-Id: I1b8fe9f949ca9aa04858321317ebb13eb01236ab
Reviewed-by: hjk <hjk@qt.io>